[package]
name = "ctuc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

no-entrypoint  = []
cpi            = []
custom-heap    = []
custom-panic   = []
anchor-debug   = []
no-idl         = []
no-log-ix-name = []
default        = []

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "s"
panic = "abort"